--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "fs": "0.0.1-security",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-transition-group": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
