--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"server": "node server.js",
+		"client": "cd client && npm start",
+		"dev": "concurrently -n server,client \"npm run server\" \"npm run client\""
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"concurrently": "^5.1.0",
 		"create-react-app": "^3.0.1",
 		"express": "^4.17.1",
+		"firebase-admin": "^8.12.1",
+		"firebase-functions": "^3.6.2",
 		"jwt-simple": "^0.5.6",
 		"mongoose": "^5.7.5",
 		"password-hash": "^1.2.2"
