--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "concurrently --names 'Serveur,Client' --prefix-colors 'yellow,blue' \"npm run server\" \"npm run client\"",
+		"test": "npm run server && npm run client",
+		"server": "node server.js",
+		"client": "cd client/ && npm start"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"concurrently": "^5.2.0",
 		"create-react-app": "^3.0.1",
 		"express": "^4.17.1",
 		"jwt-simple": "^0.5.6",
 		"mongoose": "^5.7.5",
-		"password-hash": "^1.2.2"
+		"password-hash": "^1.2.2",
+		"prompt": "^1.0.0"
 	}
 }
