Fichier de configuration et changements mineurs dans le style

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start": "concurrently --names 'Serveur,Client' --prefix-colors 'yellow,blue' \"npm run server\" \"npm run client\"",
+		"start": "concurrently --names 'Serveur,Client' --prefix-colors 'yellow,blue' \"npm run server \" \"npm run client\"",
 		"test": "npm run server && npm run client",
 		"server": "node server.js",
 		"client": "cd client/ && npm start"
@@ -11,11 +11,12 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"concurrently": "^5.2.0",
-		"create-react-app": "^3.0.1",
+		"create-react-app": "^3.4.1",
 		"express": "^4.17.1",
 		"jwt-simple": "^0.5.6",
-		"mongoose": "^5.7.5",
+		"mongoose": "^5.9.21",
 		"password-hash": "^1.2.2",
-		"prompt": "^1.0.0"
+		"prompt": "^1.0.0",
+		"react-file-viewer": "^1.2.1"
 	}
 }
