--- a/client/.babelrc
+++ b/client/.babelrc
@@ -6,6 +6,9 @@
     "plugins": [
         [
           "@babel/plugin-proposal-class-properties"
+        ],
+        [
+          "@babel/plugin-transform-runtime"
         ]
     ]
 }
