--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-file-reader": "^1.1.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "react-transition-group": "^4.4.1"
   },
   "scripts": {
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@webpack-cli/serve": "^1.0.1",
