--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-rest-actions": "^1.1.4",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
