--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "bootstrap": "^4.5.3",
     "browser-image-compression": "^1.0.12",
     "fs": "0.0.1-security",
+    "parcel-bundler": "^1.12.4",
+    "postcss-modules": "^3.2.2",
     "prop-types": "^15.7.2",
+    "pug": "^3.0.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
@@ -22,8 +25,8 @@
     "reactjs-popup": "^2.0.4"
   },
   "scripts": {
-    "start": "webpack serve --mode development --env development --hot",
-    "build": "webpack --mode production"
+    "start": "parcel --no-hmr ./public/index.html --open",
+    "build": "parcel build ./public/index.html"
   },
   "browserslist": {
     "production": [
