--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"start": "concurrently --names 'Serveur,Client' --prefix-colors 'yellow,blue' \"npm run server \" \"npm run client\"",
 		"test": "npm run server && npm run client",
-		"server": "node server.js",
+		"server": "nodemon server.js",
 		"client": "cd client/ && npm start"
 	},
 	"dependencies": {
@@ -15,8 +15,11 @@
 		"express": "^4.17.1",
 		"jwt-simple": "^0.5.6",
 		"mongoose": "^5.10.9",
+		"nodemon": "^2.0.6",
+		"parcel-bundler": "^1.12.4",
 		"password-hash": "^1.2.2",
 		"prompt": "^1.0.0",
+		"pug": "^3.0.0",
 		"react-file-viewer": "^1.2.1"
 	}
 }
