--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,13 @@
     "postcss-modules": "^3.2.2",
     "prop-types": "^15.7.2",
     "pug": "^3.0.0",
-    "react": "^16.14.0",
+    "react": ">= 16.8.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.14.0",
+    "react-dom": ">= 16.8.0",
     "react-dropzone": "^11.2.0",
     "react-file-reader": "^1.1.4",
     "react-image-crop": "^8.6.6",
+    "react-is": ">= 16.8.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
