--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "base64-inline-loader": "^1.1.1",
     "bootstrap": "^4.5.3",
     "browser-image-compression": "^1.0.12",
+    "eslint": "^7.18.0",
     "fs": "0.0.1-security",
     "parcel-bundler": "^1.12.4",
     "postcss-modules": "^3.2.2",
@@ -23,7 +24,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-transition-group": "^4.4.1",
-    "reactjs-popup": "^2.0.4"
+    "reactjs-popup": "^2.0.4",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "parcel --no-hmr ./public/index.html --open",
@@ -47,6 +49,9 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@webpack-cli/serve": "^1.0.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^5.0.0",
