--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"body-parser": "^1.19.0",
 		"concurrently": "^5.3.0",
 		"create-react-app": "^3.4.1",
+		"eslint": "^7.18.0",
 		"express": "^4.17.1",
 		"jwt-simple": "^0.5.6",
 		"mongoose": "^5.10.9",
@@ -20,6 +21,7 @@
 		"password-hash": "^1.2.2",
 		"prompt": "^1.0.0",
 		"pug": "^3.0.0",
-		"react-file-viewer": "^1.2.1"
+		"react-file-viewer": "^1.2.1",
+		"web-vitals": "^1.1.0"
 	}
 }
