--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router": "^5.1.11",
     "axios": "^0.21.1",
     "base64-inline-loader": "^1.1.1",
     "bootstrap": "^4.5.3",
@@ -35,12 +36,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "not op_mob 59"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "not op_mob 59"
     ]
   },
   "devDependencies": {
