--- a/client/package.json
+++ b/client/package.json
@@ -3,30 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react-router": "^5.1.11",
+    "@types/react-router": "^5.1.14",
     "axios": "^0.21.1",
     "base64-inline-loader": "^1.1.1",
-    "bootstrap": "^4.5.3",
-    "browser-image-compression": "^1.0.12",
+    "bootstrap": "^4.6.0",
+    "browser-image-compression": "^1.0.14",
     "eslint": "^7.18.0",
     "fs": "0.0.1-security",
-    "parcel-bundler": "^1.12.4",
+    "parcel-bundler": "^1.12.5",
     "postcss-modules": "^3.2.2",
     "prop-types": "^15.7.2",
-    "pug": "^3.0.0",
-    "react": ">= 16.8.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": ">= 16.8.0",
-    "react-dropzone": "^11.2.0",
+    "pug": "^3.0.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-file-reader": "^1.1.4",
-    "react-image-crop": "^8.6.6",
-    "react-is": ">= 16.8.0",
+    "react-image-crop": "^8.6.9",
+    "react-is": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-transition-group": "^4.4.1",
-    "reactjs-popup": "^2.0.4",
-    "typescript": "^4.1.3"
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "start": "parcel --no-hmr ./public/index.html --open",
@@ -47,28 +46,28 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@types/react": "^17.0.0",
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
+    "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
-    "@webpack-cli/serve": "^1.0.1",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^5.0.0",
+    "@webpack-cli/serve": "^1.4.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
     "file-loader": "^6.1.1",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^4.5.2",
     "image-webpack-loader": "^7.0.1",
-    "mini-css-extract-plugin": "^1.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^4.14.1",
-    "sass": "^1.27.0",
-    "sass-loader": "^10.0.3",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
