--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"create-react-app": "^3.4.1",
 		"eslint": "^7.18.0",
 		"express": "^4.17.1",
-		"jwt-simple": "^0.5.6",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.12.7",
 		"nodemon": "^2.0.6",
 		"parcel-bundler": "^1.12.4",
